--- a/.github/workflows/python-script.yml
+++ b/.github/workflows/python-script.yml
@@ -1,9 +1,12 @@
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Build KEV Rss feed and publish
 
 on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+
+  schedule:
+  - cron: "0 * * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
